style : homepage layout added

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,100 @@
-.App {
-  text-align: center;
+.main-container {
+  padding: 1.25rem;
+  margin: 1.25rem;
+  background: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+@media(min-width: 1024px) {
+  .main-container {
+    max-width: 36rem;
+  }
+}
+
+.main-invoice {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1.25rem;
+}
+
+@media(min-width:1280px) {
+  .main-invoice {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.hero-name {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  text-transform: uppercase;
+}
+
+.title {
+  margin-bottom: 0.75rem;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  text-transform: uppercase;
+}
+
+.header-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 1.25rem;
+  margin: 1.25rem;
+  background-color: #ffffff;
+  list-style-type: none;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.company-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.client-section {
+  margin-top: 1.5rem;
+}
+
+.invoice-section {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.invoice-section ul{
+  list-style-type: none;
+}
+
+.invoice-data {
+  font-weight: 700;
+}
+
+.section-table {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+.client-note{
+  margin-bottom: 1.25rem;
+}
+.footer-section {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content:center;
+}
+.footer-data{
+  font-weight: 700; 
 }
