--- a/src/components/CompanyDetails/CompanyDetails.css
+++ b/src/components/CompanyDetails/CompanyDetails.css
@@ -9,4 +9,12 @@
   font-size: 1.25rem;
   line-height: 1.75rem;
   text-transform: uppercase;
+  font-weight: 700;
+}
+
+@media (min-width: 768px) {
+  hero-name {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
