--- a/src/components/ClientNotes/ClientNotes.css
+++ b/src/components/ClientNotes/ClientNotes.css
@@ -1,3 +1,10 @@
 .client-note {
   margin-bottom: 1.25rem;
 }
+
+@media (min-width: 1024px) {
+  .client-msg {
+    width: 50%;
+    text-align: justify; 
+  }
+}
