--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,20 @@ body {
   background-color: #f1f1f1;
 }
 
+input, textarea{
+  background-color: #f1f1f1;
+  padding: 0.3rem;
+  border-radius: 0.25rem;
+  border-style: none;
+  margin-bottom: 0.8rem;
+  color:#383838;
+  font-weight: 400;
+}
+
+label{
+  margin-bottom: 0.3rem;
+}
+
+button{
+  border-style: none;
+}
