style : update homepage UI

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,6 +1,6 @@
 .section-table {
   margin-top: 1.25rem;
-  margin-top: 2.5rem; 
+  margin-top: 2.5rem;
 }
 
 .invoice-table {
@@ -11,9 +11,20 @@
 
 .invoice-table-title {
   background-color: #F3F4F6;
-  padding: 0.25rem; 
+  padding: 0.25rem;
 }
 
-.table-title-item{
-  font-weight: 600;;
+.table-title-item {
+  font-weight: 600;
+  ;
+}
+
+.total-amount-to-pay {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  color: #1F2937;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
 }
