--- a/src/components/ClientDetails/ClientDetails.css
+++ b/src/components/ClientDetails/ClientDetails.css
@@ -1,11 +1,11 @@
 .client-section {
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
 }
 
 .hero-name {
   line-height: 1.75rem;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 0.5px;
-  ;
+  margin-bottom: 0.25rem;
 }
