--- a/src/App.css
+++ b/src/App.css
@@ -24,44 +24,28 @@
   }
 }
 
-.alternative-container{
+.alternative-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.check-invoice-btn {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+.btn-print, .send-email, .check-invoice-btn {
+  padding: 0.5rem 1rem;
+  letter-spacing: 1px;
   background-color: #3B82F6;
   transition-property: all;
   transition-duration: 300ms;
-  color: #ffffff;
   font-weight: 700;
-  border-radius: 0.25rem;
-  border-width: 2px;
+  border-radius: 0.4rem;
   border-color: #3B82F6;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  color: #ffffff;
 }
 
-.check-invoice-btn:hover {
+.check-invoice-btn:hover,
+.send-email:hover,
+.btn-print:hover,
+.add-invoice-btn:hover {
   background: transparent;
-  color:#3B82F6;
-}
-
-.btn-print {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-right: 2rem;
-  background-color: #3B82F6;
-  transition-property: all;
-  transition-duration: 300ms;
-  color: #ffffff;
-  font-weight: 700;
-  border-radius: 0.25rem;
-  border-width: 2px;
-  border-color: #3B82F6;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba( 0, 0, 0, 0.06);
+  color: #3B82F6;
 }
