--- a/src/components/ClientDetails/ClientDetails.css
+++ b/src/components/ClientDetails/ClientDetails.css
@@ -1,11 +1,17 @@
-.client-section {
-  margin-top: 2.5rem;
-}
-
 .hero-name {
   line-height: 1.75rem;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 0.5px;
   margin-bottom: 0.25rem;
+}
+
+.client-section {
+  margin-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: flex-start;
+  align-items: stretch;
 }
