--- a/src/components/ClientNotes/ClientNotes.css
+++ b/src/components/ClientNotes/ClientNotes.css
@@ -1,6 +1,8 @@
 .client-note {
   margin-bottom: 1.25rem;
-  margin-top: 0.5rem; 
+  margin-top: 0.5rem;
+  font-style: italic;
+  font-weight: 500;
 }
 
 @media (min-width: 1024px) {
