--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.main-invoice {
+/* .main-invoice {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,25 +11,4 @@
     flex-direction: row;
     justify-content: space-between;
   }
-}
-
-.header-section {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 1.25rem;
-  margin: 1.25rem;
-  background-color: #ffffff;
-  list-style-type: none;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-}
-
-.title {
-  margin-bottom: 0.75rem;
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  text-transform: uppercase;
-}
+} */
