--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-/* .main-invoice {
+.main-invoice {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,4 +11,4 @@
     flex-direction: row;
     justify-content: space-between;
   }
-} */
+}
